2009-01-07  Matthias Klose  <doko@ubuntu.com>

	* patches/hotspot/14.0b08/icedtea-hotspot-dispatch.patch: New, fix
	build failure with GCC-4.4.
	* Makefile.am: Apply.
	* HACKING: Document the above.

2009-01-06  Omair Majid  <omajid@redhat.com>

	* patches/icedtea-demo-swingapplet.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Apply the above.
	* HACKING: Document the above.

2009-01-05  Andrew Haley  <aph@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Fix bad checkin.

2008-12-24  Andrew Haley  <aph@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkFunction.cpp
	(SharkFunction::initialize): Work around bug in
	ciTypeFlow::Block::pre_order_at().
	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp 
	(SharkCompiler::compile_method): Allow "*" as a wildcard.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp (llvm::IRBuilder):
	type2aelembytes now a mamber function.
	* ports/hotspot/src/share/vm/shark/sharkBlock.hpp (class
	SharkBlock): is_private_copy renamed is_backedge_copy.
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp (SharkBlock::parse):
	force_bci if there's a trap.
	* ports/hotspot/src/cpu/zero/vm/disassembler_zero.cpp: Delete
	everything.

2008-12-24  Omair Majid  <omajid@redhat.com>

	* patches/icedtea-a11y-property-change.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Apply the above.
	* HACKING: Document the above.

2008-12-24  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-cc-interp-jvmti.patch: New file.
	* patches/icedtea-cc-interp-no-fer.patch: Deleted file.
	* Makefile.am (ICEDTEA_PATCHES): Apply the above.
	* HACKING: Document the above.

2008-12-23  Matthias Klose  <doko@ubuntu.com>

	* patches/hotspot/original/icedtea-version.patch: Update.

2008-12-23  Gary Benson  <gbenson@redhat.com>

	* HACKING: Added bug id for my last patch.

2008-12-23  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ICEDTEA_ENV, ICEDTEA_ENV_GCJ): Don't explicitely append
	standard directories to PATH.
